--- a/Sales_FrontEnd/Sales/src/index.css
+++ b/Sales_FrontEnd/Sales/src/index.css
@@ -66,3 +66,10 @@
 /*    background-color: #f9f9f9;*/
 /*  }*/
 /*}*/
+.scrollbar-hide {
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+}
+.scrollbar-hide::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
+}
