--- a/Sales_FrontEnd/Sales/src/App.css
+++ b/Sales_FrontEnd/Sales/src/App.css
@@ -40,3 +40,11 @@
 /*.read-the-docs {*/
 /*  color: #888;*/
 /*}*/
+
+.scrollbar-hide {
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+}
+.scrollbar-hide::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
+}
